	added utils file, contains some general functions
	modifed chipName function for affy tiling and affy st arrays
	moved affy tiling cif file to cel file, may change back, in general the cif file appears to contain no relevant information
	added new pdInfo.PKG.template folde inst, I'm trying something out
	modified package building proceedures for tiling, st and expression arrays
	
Changes by BC in Feb-Mar 2009

** Added new builders for NGS Tiling and Affy Exon. These builders use the minimum of "gene-centric" annotation and should be able to link to org pkgs to extract more info.

03-08-09 - Benilton Carvalho

** In the new builder (v2) for Exon arrays, added a statement to remove probes that are not in the probeset.csv file.

03-09-09 - BC

** Added support to Gene ST arrays. Because these share *much* of the Exon arrays structure, I reused most of the code by adding the 'geneArray' argument to the relevant functions (parsers/builder)

03-17-09 - BC - Committed version  1.7.13

** Added support to HT Expression arrays. The same structure is expected to serve to regular Affymetrix Expression arrays as well

** Several unused functions and structures were removed.

03-19-09 - BC - Committed version 1.7.14

** Added diagnostic messages.

** Added vignette explaining how to build packages for several array types. (v 1.7.15)

03-24-09 - BC - Committed version 1.7.19

** Removed dbImport.AffyHuExArrayAnnCSV.R

** Moved contents of affy*R and ngs*R to toBeRemoved.R. The revamped versions of the builders are more robust and minimize the use of gene-centric annotation.

** Exported only classes that are used to build packages

03-25-2009 - B Carvalho

** Implemented changes mainly to templates, so pacakges pass R CMD check.

** Added slot annotation to PDInfo, so we can easily find any information about the object.

03-26-2009 - B Carvalho

** Added indices

04-02-2009 - B Carvalho

** Added SNP/CNV array

** Added increaseDbPerformance(conn)