@@ -233,6 +233,15 @@ setMethod("makePdInfoPackage", "AffySNPCNVPDInfoPkgSeed2",
             #######################################################################
             chip <- chipName(object)
             pkgName <- cleanPlatformName(chip)
+            humanchips <- c("pd.genomewidesnp.5", "pd.genomewidesnp.6")
+            if (pkgName %in% humanchips)
+              warning("The package ", pkgName,
+                      " *IS* available on BioConductor.",
+                      " This one does *NOT* provide the data required by CRLMM.",
+                      " If you have ", pkgName,
+                      " downloaded/installed directly from BioConductor,",
+                      " this one might overwrite the BioConductor one",
+                      " and CRLMM will fail to work.")
             extdataDir <- file.path(destDir, pkgName, "inst", "extdata")
             dbFileName <- paste(pkgName, "sqlite", sep=".")
             dbFilePath <- file.path(extdataDir, dbFileName)
